# Assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CNAME  Makefile  README.md  build-install.sh  codecov.yml  conftest.py  coverage.json  docker-compose.override.example.yml  docker-compose.yml  docker.example.env  mkdocs.yml  pyproject.toml  versions.json
.devin/: wiki.json
.github/: dependabot.yml  git-commit-instructions.md
apps/mewbo_api/: CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/mewbo_api/src/mewbo_api/: __init__.py  backend.py  config_view.py  ide.py  ide_routes.py  repo_identity.py  request_context.py  responses.py  vcs_pickup.py
apps/mewbo_api/src/mewbo_api/agentic_search/: CLAUDE.md  __init__.py  catalog.py  events.py  fixtures.py  graph_routes.py  mcp_config.py  routes.py  runner.py  runs.py  schemas.py  search_launcher_impl.py  source_sync.py  store.py
apps/mewbo_api/src/mewbo_api/agentic_search/scg/: CLAUDE.md  __init__.py  config.py  descriptors.py  graph_structured_runner.py  map_job.py  map_progress.py  orchestrated_runner.py  playbooks.py  related_questions.py  run_streamer.py  workspace_binding.py
apps/mewbo_api/src/mewbo_api/api/: __init__.py
apps/mewbo_api/src/mewbo_api/channels/: __init__.py  email_adapter.py  email_template.html.j2  nextcloud_talk.py  routes.py
apps/mewbo_api/src/mewbo_api/realtime/: __init__.py  grounding.py  recorder.py  routes.py
apps/mewbo_api/src/mewbo_api/structured/: __init__.py  routes.py  synthesis.py
apps/mewbo_api/src/mewbo_api/wiki/: CLAUDE.md  README.md  __init__.py  catalogues.py  embedder.py  errors.py  events.py  graph.py  jobs.py  nav_toc.py  recovery.py  resume.py  retriever.py  routes.py  store.py  types.py
apps/mewbo_api/src/mewbo_api/wiki/graph_queries/: go.scm  javascript.scm  python.scm  rust.scm
apps/mewbo_api/tests/: conftest.py  test_agentic_search.py  test_agentic_search_reenrich.py  test_agentic_search_routes_extra.py  test_agentic_search_runner.py  test_agentic_search_runs_routes.py  test_agentic_search_schemas.py  test_agentic_search_store.py  test_agentic_search_store_extra.py  test_backend.py  test_backend_endpoints.py  test_backend_sessions_flow.py  test_capability_header.py  test_channels_routes_extra.py  test_commands_api.py  test_config_api.py  test_config_view.py  test_external_cwd.py  test_ide_extra.py  test_ide_manager.py  test_ide_routes.py  test_keys_api.py  test_mcp_gold_standard.py  test_realtime_routes.py  test_reference_expansion_seam.py  test_repo_identity.py  test_session_stream.py  test_structured_routes.py  test_vcs_pickup.py  test_wiki_recovery.py  test_wiki_resume.py  test_wiki_routes_extra.py  test_worktree_routes.py
apps/mewbo_cli/: CLAUDE.md  Makefile  README.md  pyproject.toml
apps/mewbo_cli/src/mewbo_cli/: __init__.py  aider_ui.py  cli_agent_display.py  cli_commands.py  cli_completer.py  cli_context.py  cli_dialogs.py  cli_master.py
apps/mewbo_cli/tests/: test_aider_ui.py  test_cli.py  test_cli_commands.py  test_cli_commands_extra.py  test_cli_completer.py  test_cli_dialogs.py  test_cli_dialogs_extra.py  test_cli_master_extra.py  test_cli_token_stream.py
apps/mewbo_mcp/: CLAUDE.md  README.md  pyproject.toml
apps/mewbo_mcp/src/mewbo_mcp/: __init__.py  auth.py  config.py  rest.py  server.py  timeline.py  tools.py
apps/mewbo_mcp/tests/: conftest.py  test_auth.py  test_server.py  test_server_extra.py  test_timeline.py  test_tools.py  test_tools_extra.py
apps/truss_api/: CLAUDE.md  Makefile  README.md  pyproject.toml
apps/truss_api/src/truss_api/: __init__.py  backend.py  ide.py  ide_routes.py
apps/truss_api/src/truss_api/api/: __init__.py
apps/truss_api/src/truss_api/channels/: __init__.py  email_adapter.py  email_template.html.j2  nextcloud_talk.py  routes.py
apps/truss_api/tests/: test_backend.py  test_capability_header.py  test_commands_api.py  test_config_api.py  test_ide_manager.py  test_ide_routes.py
apps/truss_cli/: CLAUDE.md  Makefile  README.md  pyproject.toml
apps/truss_cli/src/truss_cli/: __init__.py  aider_ui.py  cli_agent_display.py  cli_commands.py  cli_context.py  cli_dialogs.py  cli_master.py
apps/truss_cli/tests/: test_aider_ui.py  test_cli.py  test_cli_commands.py  test_cli_dialogs.py
configs/: app.example.json  app.schema.json  mcp.example.json
data/: README.md
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.console  Dockerfile.mcp  console-entrypoint.sh  entrypoint-api.sh  nginx-console.conf  nginx-ide-proxy.conf  nginx-reverse-proxy.conf
docs/: CLAUDE.md  ci-agent-pickup.md  clients-cli.md  clients-email.md  clients-home-assistant.md  clients-mcp.md  clients-nextcloud-talk.md  clients-web-api.md  configuration.md  core-orchestration.md  deployment-docker.md  deployment-production.md  deployment-storage.md  developer-guide.md  features-agents.md  features-builtin-tools.md  features-compaction.md  features-lsp.md  features-monitors.md  features-permissions-hooks.md  features-plan-mode.md  features-plugins.md  features-policies.md  features-search.md  features-skills.md  features-structured-outputs.md  features-token-usage.md  features-web-ide.md  features-widgets.md  features-wiki.md  features-worktrees.md  getting-started.md  index.md  llm-setup.md  openapi.json  project-configuration.md  reference.md  rest-api.md  session-runtime.md  troubleshooting.md
latest/: app.schema.json  build-info.json  clients-cli.md  clients-email.md  clients-nextcloud-talk.md  clients-web-api.md  configuration.md  core-orchestration.md  deployment-docker.md  deployment-storage.md  features-agents.md  features-builtin-tools.md  features-lsp.md  features-mcp.md  features-permissions-hooks.md  features-plan-mode.md  features-plugins.md  features-skills.md  features-token-usage.md  features-widgets.md  features-wiki.md  getting-started.md  index.html  index.md  llm-setup.md  objects.inv  reference.md  session-runtime.md  sitemap.xml  troubleshooting.md
main/: app.schema.json  build-info.json  clients-cli.md  clients-nextcloud-talk.md  clients-web-api.md  index.md  (+23 more)
(+1642 files in other folders)
