[project]
name = "truss-workspace"
version = "0.0.11"
description = "Workspace package for the Truss monorepo."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }
dependencies = [
  "aniso8601>=10.0.1",
  "truss-core>=0.0.10",
  "truss-tools>=0.0.10",
  "truss-cli>=0.0.10",
]

[project.scripts]
truss = "truss_cli.cli_master:main"

[project.optional-dependencies]
api = ["truss-api>=0.0.10"]
ha = ["truss-ha-conversation>=0.0.10"]

[dependency-groups]
dev = [
  "altair>=6.1.0",
  "autopep8==2.3.2",
  "flake8==7.3.0",
  "mongomock==4.3.0",
  "mypy==1.20.2",
  "pandas>=2.3.3",
  "pre-commit==3.8.0",
  "pylint==3.3.9",
  "pytest==8.4.2",
  "pytest-cov==7.1.0",
  "ruff==0.15.12",
  "streamlit>=1.56.0",
  "types-requests==2.33.0.20260327",
  "vulture==2.16",
]
docs = [
  "mike",
  "mkdocs",
  "mkdocs-callouts>=1.16.0",
  "mkdocs-shadcn>=0.9.9",
  "mkdocstrings[python]",
  "pymdown-extensions>=10.20.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
default-groups = []

[tool.uv.sources]
truss-core = { workspace = true }
truss-tools = { workspace = true }
truss-cli = { path = "apps/truss_cli", editable = true }
truss-api = { path = "apps/truss_api", editable = true }
truss-ha-conversation = { path = "truss_ha_conversation", editable = true }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/truss_workspace"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "truss_ha_conversation/translations",
  "vendor",
]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
fixable = ["ALL"]
per-file-ignores = { "packages/truss_tools/src/truss_tools/aider_bridge/edit_blocks.py" = ["D"], "vendor/**" = ["D"], "tests/**" = ["D"] }

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = [
  "packages/truss_core/src/truss_core/**/*.py",
  "packages/truss_tools/src/truss_tools/**/*.py",
  "apps/truss_api/src/truss_api/**/*.py",
  "apps/truss_cli/src/truss_cli/**/*.py",
  "truss_ha_conversation/**/*.py",
]
explicit_package_bases = true
mypy_path = ["."]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "apps/truss_api/tests",
  "apps/truss_cli/tests",
]

[tool.coverage.run]
omit = [
  "packages/truss_tools/src/truss_tools/vendor/*",
  "vendor/*",
]
