[project]
name = "mewbo-workspace"
version = "0.0.11"
description = "Workspace package for the Mewbo monorepo."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }
dependencies = [
  "aniso8601>=10.0.1",
  "mewbo-core>=0.0.10",
  "mewbo-tools>=0.0.10",
  "mewbo-cli>=0.0.10",
]

[project.scripts]
mewbo = "mewbo_cli.cli_master:main"

[project.optional-dependencies]
api = ["mewbo-api>=0.0.10"]
ha = ["mewbo-ha-conversation>=0.0.10"]

[dependency-groups]
dev = [
  "altair>=6.1.0",
  "autopep8==2.3.2",
  "flake8==7.3.0",
  "mongomock==4.3.0",
  "mypy==1.19.1",
  "pandas>=2.3.3",
  "pre-commit==3.8.0",
  "pylint==3.3.9",
  "pytest==8.4.2",
  "pytest-cov==7.1.0",
  "ruff==0.15.8",
  "streamlit>=1.56.0",
  "types-requests==2.33.0.20260327",
  "vulture==2.16",
]
docs = [
  "mike",
  "mkdocs",
  "mkdocs-callouts>=1.16.0",
  # Brand-fork of mkdocs-shadcn — same `theme: shadcn` entrypoint plus the
  # Mewbo brand chrome, Ask AI panel, sidebar nav-icons, prefetch
  # speculation, ToC rail, dual-mode search modal, full SEO. Pinned to a
  # specific commit so docs builds are reproducible. Bump by changing
  # the URL to point at a newer commit-<sha> or v* release.
  "mkdocs-shadcn-mewbo @ https://github.com/mewbo-com/mkdocs-shadcn/releases/download/commit-2c2601a/mkdocs_shadcn_mewbo-1.0.0%2B2c2601a-py3-none-any.whl",
  "mkdocstrings[python]",
  "pymdown-extensions>=10.20.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
default-groups = []

[tool.uv.sources]
mewbo-core = { workspace = true }
mewbo-tools = { workspace = true }
mewbo-cli = { path = "apps/mewbo_cli", editable = true }
mewbo-api = { path = "apps/mewbo_api", editable = true }
mewbo-ha-conversation = { path = "mewbo_ha_conversation", editable = true }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mewbo_workspace"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "mewbo_ha_conversation/translations",
  "vendor",
  "scripts",
]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
fixable = ["ALL"]
per-file-ignores = { "packages/mewbo_tools/src/mewbo_tools/aider_bridge/edit_blocks.py" = ["D"], "vendor/**" = ["D"], "tests/**" = ["D"] }

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = [
  "packages/mewbo_core/src/mewbo_core/**/*.py",
  "packages/mewbo_tools/src/mewbo_tools/**/*.py",
  "apps/mewbo_api/src/mewbo_api/**/*.py",
  "apps/mewbo_cli/src/mewbo_cli/**/*.py",
  "mewbo_ha_conversation/**/*.py",
]
explicit_package_bases = true
mypy_path = ["."]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "apps/mewbo_api/tests",
  "apps/mewbo_cli/tests",
]

[tool.coverage.run]
omit = [
  "packages/mewbo_tools/src/mewbo_tools/vendor/*",
  "vendor/*",
]
