[project]
name = "mewbo-workspace"
version = "0.0.13"
description = "Workspace package for the Mewbo monorepo."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }
dependencies = [
  "aniso8601>=10.0.1",
  "mewbo-core>=0.0.10",
  "mewbo-tools>=0.0.10",
  "mewbo-cli>=0.0.10",
]

[project.scripts]
mewbo = "mewbo_cli.cli_master:main"

[project.optional-dependencies]
api = ["mewbo-api>=0.0.10"]
ha = ["mewbo-ha-conversation>=0.0.10"]
wiki = ["mewbo-api[wiki]>=0.0.10"]
mcp = ["mewbo-mcp>=0.0.10"]

[dependency-groups]
dev = [
  "altair>=6.1.0",
  "autopep8==2.3.2",
  "flake8==7.3.0",
  "mongomock==4.3.0",
  "mypy==1.20.2",
  "pandas>=2.3.3",
  "pre-commit==3.8.0",
  "pylint==3.3.9",
  "pytest==8.4.2",
  "pytest-cov==7.1.0",
  "ruff==0.15.17",
  "streamlit>=1.56.0",
  "types-requests==2.33.0.20260327",
  "vulture==2.16",
]
docs = [
  "mike",
  "mkdocs",
  "mkdocs-callouts>=1.16.0",
  # Brand-fork of mkdocs-shadcn — same `theme: shadcn` entrypoint plus the
  # Mewbo brand chrome, Ask AI panel, sidebar nav-icons, prefetch
  # speculation, ToC rail, dual-mode search modal, full SEO.
  #
  # Pin the immutable tag-release wheel, never `latest-master`: that rolling
  # release renames its asset on every version bump (the filename embeds the
  # version), 404ing the old URL and breaking builds. To upgrade: tag a new
  # vX.Y.Z in the fork, update this URL, then refresh the lock:
  #
  #   uv lock --upgrade-package mkdocs-shadcn-mewbo
  "mkdocs-shadcn-mewbo @ https://github.com/mewbo-com/mkdocs-shadcn/releases/download/v1.3.0/mkdocs_shadcn_mewbo-1.3.0-py3-none-any.whl",
  "mkdocstrings[python]",
  "pymdown-extensions>=10.20.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
default-groups = []

[tool.uv.sources]
mewbo-core = { workspace = true }
mewbo-tools = { workspace = true }
mewbo-graph = { workspace = true }
mewbo-cli = { path = "apps/mewbo_cli", editable = true }
mewbo-api = { path = "apps/mewbo_api", editable = true }
mewbo-mcp = { path = "apps/mewbo_mcp", editable = true }
mewbo-ha-conversation = { path = "apps/mewbo_ha_conversation", editable = true }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Metadata-only root meta-package: ships the `mewbo` entry point and dist
# metadata (mewbo_core.config.get_version fallback) with no package files.
bypass-selection = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "apps/mewbo_ha_conversation/translations",
  "vendor",
  "scripts",
]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
fixable = ["ALL"]
per-file-ignores = { "packages/mewbo_tools/src/mewbo_tools/aider_bridge/edit_blocks.py" = ["D"], "vendor/**" = ["D"], "tests/**" = ["D"], "apps/*/tests/**" = ["D"] }

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = [
  "packages/mewbo_core/src/mewbo_core/**/*.py",
  "packages/mewbo_tools/src/mewbo_tools/**/*.py",
  "packages/mewbo_graph/src/mewbo_graph/**/*.py",
  "apps/mewbo_api/src/mewbo_api/**/*.py",
  "apps/mewbo_mcp/src/mewbo_mcp/**/*.py",
  "apps/mewbo_cli/src/mewbo_cli/**/*.py",
  "apps/mewbo_ha_conversation/**/*.py",
]
explicit_package_bases = true
mypy_path = ["."]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "apps/mewbo_api/tests",
  "apps/mewbo_mcp/tests",
  "apps/mewbo_cli/tests",
]

[tool.coverage.run]
omit = [
  "packages/mewbo_tools/src/mewbo_tools/vendor/*",
  "vendor/*",
]
