[project]
name = "mewbo-api"
version = "0.0.11"
description = "REST API Engine wrapped around the Mewbo core."
readme = "../../README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }

dependencies = [
  "mewbo-core>=0.0.10",
  "mewbo-tools>=0.0.10",
  "flask>=3.0.3,<4.0.0",
  "flask-restx>=1.3.0,<2.0.0",
  "gunicorn>=22.0.0",
  "imapclient>=3.0,<4.0",
  "mistune>=3.0,<4.0",
  "docker>=7.0,<8.0",
]

[project.scripts]
mewbo-api = "mewbo_api.backend:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mewbo_api"]
