[project]
name = "mewbo-api"
version = "0.0.13"
description = "REST API Engine wrapped around the Mewbo core."
readme = "../../README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }

dependencies = [
  "mewbo-core>=0.0.10",
  "mewbo-tools>=0.0.10",
  "flask>=3.0.3,<4.0.0",
  "flask-restx>=1.3.0,<2.0.0",
  "gunicorn>=22.0.0",
  "imapclient>=3.0,<4.0",
  "mistune>=3.0,<4.0",
  "docker>=7.0,<8.0",
]

[project.optional-dependencies]
# The wiki + search substrate now lives in the optional `mewbo-graph`
# library (Gitea #25). This extra forwards to it so the public name and the
# Docker `WIKI_EXTRAS` toggle are unchanged — `mewbo-api[wiki]` still pulls
# tree-sitter + rank-bm25 + numpy, now transitively via mewbo-graph's own
# extras. Base `mewbo-api` installs graph-less; every graph import in the
# api is guarded so the server still boots without this extra.
# Embeddings ride litellm against the LiteLLM proxy (no extra client) —
# see packages/mewbo_graph/src/mewbo_graph/wiki/embedder.py.
wiki = [
    "mewbo-graph[treesitter,retrieval]>=0.0.13",
]

[project.scripts]
mewbo-api = "mewbo_api.backend:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mewbo_api"]
