[project]
name = "mewbo-mcp"
version = "0.0.13"
description = "Standalone MCP server wrapping the Mewbo REST API."
readme = "../../README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }

dependencies = [
  "mewbo-core>=0.0.10",
  "mcp>=1.0.0",
  "httpx>=0.27,<1.0",
]

[project.scripts]
mewbo-mcp = "mewbo_mcp.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mewbo_mcp"]
